# lscstring

./: CMakeLists.txt
include/ls/cstring/: API.h
sample/: sample.cpp
src/ls/cstring/: API.cpp
